fixed pantalla from word wrapping in smaller screens

--- a/style.css
+++ b/style.css
@@ -9,11 +9,9 @@ body {
 .pantalla {
     font-family: 'Orbitron', sans-serif;
     color: #c4f327;
-    /* text-align: center; */
     width: 70%;
     min-height: 46px;
     margin: 0 15%;
-    /* padding: 10px; */
     border-radius: 8px;
     position: absolute;
     top: 0;
@@ -26,18 +24,20 @@ body {
     line-height: 46px;
     margin: 0;
     padding: 0;
-    width: 100%;
+    width: auto;
+    white-space: nowrap;
     -moz-animation: ticker 10s linear infinte;
     -webkit-aniation: ticker 10s linear infinte;
     animation: ticker 10s linear infinite;
 }
+
 @-moz-keyframes ticker {
     0% {-moz-transform: translateX(100%);}
-    100% {-moz-transform: translateX(-50%);}
+    100% {-moz-transform: translateX(-100%);}
 }
 @-webkit-keyframes ticker {
     0% {-webkit-transform: translateX(100%);}
-    100% {-webkit-transform: translateX(-50%);}
+    100% {-webkit-transform: translateX(-100%);}
 }
 @keyframes ticker {
     0% {
@@ -46,9 +46,9 @@ body {
         transform: translateX(100%);
     }
     100% {
-        -moz-transform: translateX(-50%);
-        -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+        -moz-transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
     }
 }
 
@@ -120,9 +120,7 @@ img {
     max-height: 60px;
     width: auto;
 }
-/* .newsPic {
-    height: 50%;
-} */
+
 #sponsor {
     position: sticky;
     position: -webkit-sticky;
